# nba_prediction_engine

./: Cargo.toml  README.md
data/fetched_data_output_as_string/: fetched_Bet365Odds_data  fetched_Bet365Odds_data.txt  fetched_InjuryReport_data  fetched_InjuryReport_data.txt  fetched_OpponentShootingGeneral_data.txt  fetched_PlayerGeneralAverages_data  fetched_PlayerGeneralAverages_data.txt  fetched_PlayerIndex_data  fetched_PlayerIndex_data.txt  fetched_SeasonSchedule_data  fetched_SeasonSchedule_data.txt  fetched_TeamsGeneralAdvanced_data.txt  fetched_TeamsGeneralOpponent_data
data/prepared_data/: fetched_Bet365Odds_data.csv  fetched_InjuryReport_data.csv  fetched_OpponentShootingGeneral_data.csv  fetched_PlayerGeneralAverages_data.csv  fetched_PlayerIndex_data.csv  fetched_SeasonSchedule_data.json  fetched_TeamsGeneralAdvanced_data.csv  fetched_TeamsGeneralOpponent_data.csv
data/seed_data/: injuryReport.json  leaguedashoppptshot.json  leaguedashplayerstats.json  leaguedashteamstats.json  leaguedashteamstatsAdvanced.json  playerindex.json  todaysScoreboard_00.json
data_fetcher/: Cargo.toml
data_fetcher/src/: bet_ml_odds.rs  error.rs  injury_report.rs  lib.rs  opponent_shooting_general.rs  player_general_averages.rs  player_index.rs  result_sets.rs  season_schedule.rs  teams_general_advanced.rs  teams_general_opponent.rs  todays_scoreboard.rs
data_wrangler/: Cargo.toml  player_index_averages_injury_report_df.csv
data_wrangler/src/: lib.rs  player_stats.rs
nba_cli/: Cargo.toml
nba_cli/src/: main.rs
prediction_engine/: Cargo.toml
