[package]
name = "nba_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
data_fetcher = { path = "../data_fetcher" }